log
Thu 04 May 2023 03:45:36 PM UTC: 
 tests:  0|5
total_score: 0/70
4fc3fe3
Fri 05 May 2023 02:35:29 AM UTC: 
 sudoku.c | 47 ++++++++++++++++++++++++++++++++---------------
 1 file changed, 32 insertions(+), 15 deletions(-)
 tests:  0|5
total_score: 0/70
66907c0
Fri 05 May 2023 02:46:08 AM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:7: error: ‘i’ undeclared (first use in this function)
   67 |   for(i = 0 ; i < 9 ; i++)
      |       ^
sudoku.c:67:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:69:9: error: ‘j’ undeclared (first use in this function)
   69 |     for(j = 0 ; j < 9 ; j++)
      |         ^
sudoku.c:65:9: error: unused variable ‘list’ [-Werror=unused-variable]
   65 |   List *list= createList();
      |         ^~~~
sudoku.c: At top level:
sudoku.c:78:3: error: expected identifier or ‘(’ before ‘return’
   78 |   return list;
      |   ^~~~~~
sudoku.c:79:1: error: expected identifier or ‘(’ before ‘}’ token
   79 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c31cfc6
Fri 05 May 2023 02:46:32 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:9: error: unused variable ‘list’ [-Werror=unused-variable]
   65 |   List *list= createList();
      |         ^~~~
sudoku.c: At top level:
sudoku.c:78:3: error: expected identifier or ‘(’ before ‘return’
   78 |   return list;
      |   ^~~~~~
sudoku.c:79:1: error: expected identifier or ‘(’ before ‘}’ token
   79 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a5ee742
Fri 05 May 2023 02:46:50 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
fb92924
Fri 05 May 2023 02:51:55 AM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c2c60f3
Fri 05 May 2023 02:58:19 AM UTC: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:27: error: statement with no effect [-Werror=unused-value]
   75 |           n -> sudo[i][j] == nuevo;
      |           ~~~~~~~~~~~~~~~~^~~~~~~~
sudoku.c:76:43: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   76 |           if (is_valid(n)) pushBack(list, nuevo);
      |                                           ^~~~~
      |                                           |
      |                                           int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
a2d39c1
